--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,11 +38,11 @@ jobs:
             cd ${{ env.PRESENTATION_FOLDER }}
             slidev build --base '/${{ env.TARGET_REPO_NAME }}'
 
-      # Requires (1) global account setup with PAT https://stackoverflow.com/a/68781050 and (2) secret setup using that PAT in this repo (`secrets.MATHEMA_GH_TOKEN`)
+      # Requires (1) global account setup with PAT https://stackoverflow.com/a/68781050 and (2) secret setup using that PAT in this repo (`secrets.MATHEMA_TOKEN`)
       - name: Deploy to target repository
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           single-commit: true
           folder: ${{ env.PRESENTATION_FOLDER }}/dist # The folder the action should deploy
           repository-name: '${{ env.TARGET_GITHUB_OWNER }}/${{ env.TARGET_REPO_NAME }}'
-          token: ${{ secrets.MATHEMA_GH_TOKEN }}
+          token: ${{ secrets.MATHEMA_TOKEN }}
