🔧 update cSpell dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
     "cSpell.words": [
+        "dotnetdayfranken",
+        "draptik",
+        "github",
+        "GITHUB",
         "linux",
+        "slidev",
         "Slidev"
     ]
 }
