💚 reset target repo name

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
     env:
       PRESENTATION_FOLDER: 'presentation'
       TARGET_REPO_NAME: '2023-04-dotnetdayfranken-modern-linux-cli-tools'
-      TARGET_GITHUB_OWNER: 'draptik'
+      TARGET_GITHUB_OWNER: 'MATHEMA-GmbH'
 
     runs-on: ubuntu-latest
 
@@ -44,4 +44,4 @@ jobs:
           single-commit: true
           folder: ${{ env.PRESENTATION_FOLDER }}/dist # The folder the action should deploy
           repository-name: '${{ env.TARGET_GITHUB_OWNER }}/${{ env.TARGET_REPO_NAME }}'
-          token: ${{ secrets.SLIDEV_TOKEN }}
+          token: ${{ secrets.MATHEMA_TOKEN }}
