🔧 add asciinema to cSpell

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "alwaysontop",
         "apachetop",
         "ascii",
+        "asciinema",
         "bunzip",
         "bzcat",
         "climagic",
