🔧 update cSpell dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,7 @@
         "lzcat",
         "lzma",
         "machinename",
+        "mathemacampus",
         "multipane",
         "ncdu",
         "neofetch",
