💄 update slides for magdeburger devdays

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "colorls",
         "commandline",
         "debian",
+        "devdays",
         "dotnetdayfranken",
         "draptik",
         "emacs",
@@ -29,6 +30,7 @@
         "lzcat",
         "lzma",
         "machinename",
+        "magdeburger",
         "mathemacampus",
         "multipane",
         "ncdu",
