👷 add demotest branch to see if this works pushing to work account

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,7 @@
         "lzma",
         "machinename",
         "magdeburger",
+        "MATHEMA",
         "mathemacampus",
         "multipane",
         "ncdu",
