✨ adopt for md-devdays

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,7 @@
         "magdeburger",
         "MATHEMA",
         "mathemacampus",
+        "mddevdays",
         "multipane",
         "ncdu",
         "neofetch",
