✨ slides: add chatgpt screenshot

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "asciinema",
         "bunzip",
         "bzcat",
+        "chatgpt",
         "climagic",
         "colorls",
         "commandline",
