--- a/presentation/package.json
+++ b/presentation/package.json
@@ -12,7 +12,9 @@
     "@slidev/theme-seriph": "*"
   },
   "devDependencies": {
+    "@iconify-json/arcticons": "^1.1.80",
     "@iconify-json/emojione": "^1.1.2",
+    "@iconify-json/fa": "^1.1.5",
     "@iconify-json/logos": "^1.1.25",
     "@iconify-json/mdi": "^1.1.33",
     "@iconify-json/noto": "^1.1.5",
