⚗️ add trailing slash to ci script

--- a/.github/workflows/deploy-wjax.yml
+++ b/.github/workflows/deploy-wjax.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Build
         run: |
             cd ${{ env.PRESENTATION_FOLDER }}
-            slidev build --base '/${{ env.TARGET_REPO_NAME }}'
+            slidev build --base '/${{ env.TARGET_REPO_NAME }}/'
 
       - name: Deploy to target repository
         uses: JamesIves/github-pages-deploy-action@v4
