--- a/.github/workflows/deploy-wjax.yml
+++ b/.github/workflows/deploy-wjax.yml
@@ -31,6 +31,7 @@ jobs:
         run:  |
             cd ${{ env.PRESENTATION_FOLDER }}
             npm i -g @slidev/cli
+            npm i -g @slidev/theme-default
 
       # Ensure to set the base directory to the current branch name
       - name: Build
