--- a/presentation/package.json
+++ b/presentation/package.json
@@ -1,5 +1,6 @@
 {
   "name": "modern-linux-cli-tools",
+  "type": "module",
   "private": true,
   "scripts": {
     "build": "slidev build",
@@ -7,17 +8,13 @@
     "export": "slidev export"
   },
   "dependencies": {
-    "@slidev/cli": "^0.40.3",
-    "@slidev/theme-default": "*",
-    "@slidev/theme-seriph": "*"
+    "@slidev/cli": "^0.43.13",
+    "@slidev/theme-default": "latest",
+    "@slidev/theme-seriph": "latest"
   },
   "devDependencies": {
-    "@iconify-json/emojione": "^1.1.2",
-    "@iconify-json/logos": "^1.1.25",
-    "@iconify-json/mdi": "^1.1.33",
-    "@iconify-json/noto": "^1.1.5",
-    "@iconify-json/openmoji": "^1.1.11",
-    "@iconify-json/simple-icons": "^1.1.27",
-    "playwright-chromium": "^1.33.0"
+    "@iconify-json/logos": "^1.1.37",
+    "@iconify-json/noto": "^1.1.12",
+    "@iconify-json/openmoji": "^1.1.38"
   }
 }
