🔧 try to get icons working by installing unplugin-icons and iconify icons

--- a/.github/workflows/deploy-wjax.yml
+++ b/.github/workflows/deploy-wjax.yml
@@ -32,6 +32,8 @@ jobs:
             cd ${{ env.PRESENTATION_FOLDER }}
             npm i -g @slidev/cli
             npm i -g @slidev/theme-default
+            npm i -g unplugin-icons
+            npm i -g @iconify/json
 
       # Ensure to set the base directory to the current branch name
       - name: Build
