--- a/presentation/package.json
+++ b/presentation/package.json
@@ -14,7 +14,9 @@
   },
   "devDependencies": {
     "@iconify-json/logos": "^1.1.37",
+    "@iconify-json/mdi": "^1.1.55",
     "@iconify-json/noto": "^1.1.12",
-    "@iconify-json/openmoji": "^1.1.38"
+    "@iconify-json/openmoji": "^1.1.38",
+    "@iconify-json/simple-icons": "^1.1.76"
   }
 }
