--- a/presentation/package.json
+++ b/presentation/package.json
@@ -13,7 +13,9 @@
     "@slidev/theme-seriph": "latest"
   },
   "devDependencies": {
+    "@iconify-json/emojione": "^1.1.7",
     "@iconify-json/logos": "^1.1.37",
+    "@iconify-json/material-symbols": "^1.1.61",
     "@iconify-json/mdi": "^1.1.55",
     "@iconify-json/noto": "^1.1.12",
     "@iconify-json/openmoji": "^1.1.38",
