--- a/presentation/package.json
+++ b/presentation/package.json
@@ -19,6 +19,7 @@
     "@iconify-json/mdi": "^1.1.55",
     "@iconify-json/noto": "^1.1.12",
     "@iconify-json/openmoji": "^1.1.38",
-    "@iconify-json/simple-icons": "^1.1.76"
+    "@iconify-json/simple-icons": "^1.1.76",
+    "playwright-chromium": "^1.39.0"
   }
 }
