--- a/.github/workflows/deploy-wjax.yml
+++ b/.github/workflows/deploy-wjax.yml
@@ -34,6 +34,7 @@ jobs:
             npm i -g @slidev/theme-default
             npm i -g unplugin-icons
             npm i -g @iconify/json
+            npm i -g playwright-chromium
 
       # Ensure to set the base directory to the current branch name
       - name: Build
