--- a/.github/workflows/deploy-magdeburger-devdays-2024.yml
+++ b/.github/workflows/deploy-magdeburger-devdays-2024.yml
@@ -31,9 +31,9 @@ jobs:
         run:  |
             cd ${{ env.PRESENTATION_FOLDER }}
             npm i -g @slidev/cli
-            npm i -g @slidev/cli
             npm i -g @slidev/theme-default
             npm i -g unplugin-icons
+            npm i -g openmoji
             npm i -g @iconify/json
             npm i -g playwright-chromium
 
