💚 ci: yet another missing font

--- a/.github/workflows/deploy-magdeburger-devdays-2024.yml
+++ b/.github/workflows/deploy-magdeburger-devdays-2024.yml
@@ -34,6 +34,7 @@ jobs:
             npm i -g @slidev/theme-default
             npm i -g unplugin-icons
             npm i -g openmoji
+            npm i -g @fontsource-variable/noto-emoji
             npm i -g @iconify/json
             npm i -g playwright-chromium
 
