--- a/.github/workflows/deploy-magdeburger-devdays-2024.yml
+++ b/.github/workflows/deploy-magdeburger-devdays-2024.yml
@@ -30,12 +30,16 @@ jobs:
       - name: Install slidev
         run:  |
             cd ${{ env.PRESENTATION_FOLDER }}
+            npm i -g unplugin-icons
+            npm i -g @iconify-json/emojione
+            npm i -g @iconify-json/logos
+            npm i -g @iconify-json/mdi
+            npm i -g @iconify-json/noto
+            npm i -g @iconify-json/openmoji
+            npm i -g @iconify-json/simple-icons
+            npm i -g playwright-chromium
             npm i -g @slidev/cli
             npm i -g @slidev/theme-default
-            npm i -g unplugin-icons
-            npm i -g @iconify/json
-            npm i -g @iconify-json/mdi
-            npm i -g playwright-chromium
 
       # Ensure to set the base directory to the current branch name
       - name: Build
