💚 ci: install locally (without -g)

--- a/.github/workflows/deploy-magdeburger-devdays-2024.yml
+++ b/.github/workflows/deploy-magdeburger-devdays-2024.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
             cd ${{ env.PRESENTATION_FOLDER }}
-            npm install --global
+            npm install
 
       - name: Install slidev
         run:  |
