--- a/.github/workflows/deploy-adc-24.yml
+++ b/.github/workflows/deploy-adc-24.yml
@@ -16,9 +16,9 @@ jobs:
 
     steps:
 
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
           node-version: 'lts/*'
 
@@ -27,21 +27,10 @@ jobs:
             cd ${{ env.PRESENTATION_FOLDER }}
             npm install
 
-      - name: Install slidev
-        run:  |
-            cd ${{ env.PRESENTATION_FOLDER }}
-            npm i -g @slidev/cli
-            npm i -g @slidev/theme-default
-            npm i -g unplugin-icons
-            npm i -g @iconify/json
-            npm i -g @iconify-json/mdi
-            npm i -g playwright-chromium
-
-      # Ensure to set the base directory to the current branch name
       - name: Build
         run: |
             cd ${{ env.PRESENTATION_FOLDER }}
-            slidev build --base '/${{ env.TARGET_REPO_NAME }}/'
+            npm run build -- --base '/${{ env.TARGET_REPO_NAME }}/'
 
       - name: Deploy to target repository
         uses: JamesIves/github-pages-deploy-action@v4
